--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dash-bootstrap-components = "^1.0.2"
 dash-bootstrap-templates = "^1.0.4"
 openpyxl = "^3.0.9"
 functions = "^0.7.0"
+boto3 = "^1.21.31"
 
 [tool.poetry.dev-dependencies]
 
