--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ openpyxl = "^3.0.9"
 functions = "^0.7.0"
 boto3 = "^1.21.31"
 sklearn = "^0.0"
+yadisk = "^1.2.15"
 
 [tool.poetry.dev-dependencies]
 
